per_locus/nohup.out
150.45user 11.30system 3:06.93elapsed 86%CPU (0avgtext+0avgdata 496360maxresident)k
2594360inputs+384outputs (105major+2195925minor)pagefaults 0swaps
150.14user 9.75system 3:03.83elapsed 86%CPU (0avgtext+0avgdata 496324maxresident)k
787592inputs+360outputs (302major+1657670minor)pagefaults 0swaps
11424.69user 863.44system 4:00:05elapsed 85%CPU (0avgtext+0avgdata 496700maxresident)k
8870672inputs+33720outputs (333major+130168062minor)pagefaults 0swaps
  File "SISTR_v2_upd.py", line 247
    results.write('N/A' + '\t' + s'N/A' + '\t' + \
                                      ^
SyntaxError: invalid syntax
0.02user 0.00system 0:00.05elapsed 62%CPU (0avgtext+0avgdata 7180maxresident)k
48inputs+8outputs (1major+1900minor)pagefaults 0swaps
2257.46user 2.66system 37:54.30elapsed 99%CPU (0avgtext+0avgdata 668756maxresident)k
939632inputs+27648outputs (103major+175644minor)pagefaults 0swaps
